# el

./: .gitignore  .replit  CITATION.cff  README.md  pyproject.toml  replit.md
attached_assets/: Pasted--te-bu-E-ik-5-kapand-Wave-de-il-hybrid-kazand-K-z-l-Elm_1776414524111.txt  Pasted-2-se-Ama-bir-farkla-Wave-only-v6-y-negatif-sonu-olarak-_1776414039131.txt  Pasted-Tamam-O-zaman-tek-net-cevap-veriyorum-MD-YAPMAN-GEREKEN_1776412389670.txt  Pasted-Zamanla-de-il-e-ik-ge-ince-Bu-sistem-b-y-k-model-oldu-u_1776406486389.txt
checkpoints/action-transformer/: config.json  corpus.jsonl  eval_report.json  metrics.json  model.pt  test_indices.json  tokenizer.json
docs/github-workflow-template/: README.md
el/: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  reproduce.sh
el/data/: istanbul_2024_hourly.json
el/docs/: paper-draft.md
el/scripts/: el_anomaly.py  el_continual.py  el_continual_massive.py  el_frozen_classify.py  el_generation.py  el_hybrid_fix.py  el_lm.py  el_lm_v2.py  el_memory.py  el_rl_repair.py  el_substrate_query.py  el_swe_quixbugs.py  el_swebench_classify.py  el_swebench_patch_match.py  el_text_massive.py  el_text_memory.py  el_use_classify.py  el_use_classify_v2.py  el_world_model.py  el_world_model_rl.py  extreme_capacity.py  extreme_capacity_lite.py  multitask_probe.py  output_yol1_retrieval.py  output_yol2_hybrid_decoder.py  output_yol3_recall_text.py  (+5 more)
scripts/: modal_train.py  tantrium_poll.sh
seed_data/: core_skills.jsonl  man_synth.jsonl
tests/: test_parser.py  test_review_fixes.py  test_rewards.py  test_selfplay_and_executor.py
(+103 files in other folders)
