[project]
name = "el"
version = "0.1.0"
description = "LLM-free, action-grounded, locally-learning PC agent with dual-memory architecture."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Alptekin Keser", email = "keseralptekin@gmail.com"},
]
keywords = [
    "agent",
    "ai",
    "decision-transformer",
    "grounded-language",
    "local-plasticity",
    "skill-library",
    "self-play",
    "complementary-learning-systems",
]
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.5.0"]
train = ["torch>=2.0"]
http = ["httpx>=0.24"]
full = ["torch>=2.0", "httpx>=0.24"]

[project.scripts]
el = "el.cli:main"

[project.urls]
Homepage = "https://github.com/4lptek1n/el"
Repository = "https://github.com/4lptek1n/el"
Issues = "https://github.com/4lptek1n/el/issues"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "seed_data",
    "runs",
    ".el_cache",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["ignore::DeprecationWarning"]
